--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "webpack serve --mode development"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.5.1",
     "postcss-loader": "^6.2.1",
     "style-loader": "^3.3.0",
@@ -21,6 +21,9 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-to-webcomponent": "^2.0.0",
     "tailwindcss": "^3.4.3"
   }
 }
